# grpc_cpp

./: CMakeLists.txt  README.md
client/: greeter_client.cc
include/: object.h  yolo.h
protos/: helloworld.proto
server/: greeter_server.cc
